# Polaris

./: AGENTS.md  pyproject.toml
scripts/finetune/: main_finetune.py
scripts/preprocess/: preprocess_mimic_iv_ecg.py
scripts/pretrain/: main_pretrain.py
scripts/zeroshot/: test_zeroshot.py
src/polaris/: paths.py
src/polaris/backbone/: ecg_transformer.py  fairseq_transformer.py  modeling_vqnsp.py  norm_ema_quantizer.py  st_ecgformer.py  tokenizer.py
src/polaris/datasets/: finetune_datamodule.py  finetune_dataset.py  pretrain_datamodule.py  pretrain_dataset.py
src/polaris/models/: ecgfm_model.py  melp_model.py  merl_model.py
src/polaris/prompt/: dataset_class_names.json
