[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "melp"

version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"
# TODO: update dependencies later
dependencies = [
    "pandas",
    "torch",
    "lightning"
]

[tool.setuptools.packages.find]
where = ["src"]    # list of folders that contain the packages (["."] by default)
include = ["src"]  # package names should match these glob patterns (["*"] by default)
exclude = []         # exclude packages matching these glob patterns (empty by default)
namespaces = false   # to disable scanning PEP 420 namespaces (true by default)
